# podguy

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  podguy  podguy.example.toml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
prompts/: chapters.md  clips.md  cut-clips.md  cuts.md  full-review.md  phase1.md  prepare-analysis.md  proper-nouns.md  publish-youtube.md  quotes.md  show-notes.md
scripts/: cut_clips.py  download_sample_media.sh  make_test_fixture.sh  prepare_transcript_analysis.py  scan_podcast.swift  test.sh  transcribe_video.py  youtube_publish.py
src/: podguy-startup.ts
src/podguy-clip-cutter/: SKILL.md
src/podguy-post-production/: SKILL.md
src/podguy-youtube-publisher/: SKILL.md
tests/: smoke.test.ts  test_cut_clips.sh  test_cut_clips_parsing.sh  test_download_sample_media.sh  test_launcher.sh  test_prepare_transcript_analysis.sh  test_scan_podcast.sh  test_transcribe_video.sh  test_youtube_publish.sh
